# seg_and_track_v2

./: compose.base.yaml  compose.dev.yaml
common_packages/assistant_tests/: pyproject.toml
common_packages/assistant_tests/assistant_tests/: __init__.py
common_packages/assistant_tests/assistant_tests/tests/: data.py  models.py  old_data.py  response_comparators.py  ruff.toml  turn_requests.py
common_packages/services_api/: pyproject.toml
common_packages/services_api/services_api/: assistant.py  file_uploader.py  llm_vicuna13b.py  planner.py  seg_and_track.py  ssml_tagger.py
common_packages/voice_assistant_extensions/: README.md  pyproject.toml
common_packages/voice_assistant_extensions/voice_assistant_extensions/: __init__.py  utils.py
common_packages/voice_assistant_extensions/voice_assistant_extensions/logger/: logger.py  middleware.py
common_packages/voice_assistant_extensions/voice_assistant_extensions/models/: __init__.py  _base.py  arguments.py  commands.py  responses.py  types.py
common_packages/voice_assistant_extensions/voice_assistant_extensions/web_clients/: http_client.py  ws_client.py  ws_server.py
seg_and_track/: Dockerfile  app.py  test_app.py
seg_and_track/src/: depth_map.py  langchain_api.py  seg_and_track.py  seg_and_track_api.py  visualization.py
seg_and_track/src/metric_depth/depth_anything_v2/: dpt.py
seg_and_track/src/metric_depth/depth_anything_v2/util/: transform.py
seg_and_track/tests/: data.py
seg_and_track/tests/data/output_images/: wp0.json  wp1.json  wp2.json  wp3.json
services/seg_and_track/: app.py  pyproject.toml  test_app.py
services/seg_and_track/src/: conversions.py  depth_map.py  langchain_api.py  masks.py  seg_and_track.py
services/seg_and_track/src/metric_depth/depth_anything_v2/: dinov2.py
services/seg_and_track/tests/: data.py
services/seg_and_track/tests/data/output_images/: torso_4_box.json  wp0.json  wp1.json  wp1_2box.json  wp2.json  wp3.json
