[tool.poetry]
name = "seg_and_track"
version = "0.1.0"
description = ""
authors = ["Angelika Kochetkova <kochetkova.angelika@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.0"
sse-starlette = "^2.1.3"
fastapi = { extras = ["standard"], version = "^0.112.0" }
pytest = { extras = ["asyncio"], version = "^8.3.3" }
ultralytics = "8.3.29"
opencv-contrib-python = "4.6.0.66"
huggingface-hub = "0.26.2"
services-api = { path = "/common_packages/services_api", develop = true }
scikit-learn = "1.5.2"
uvicorn = "^0.31.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
numpy = "1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
